[bug]#4726 fix text overflow from blog-list cards

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -4189,6 +4189,12 @@ plus{
 		font-size: 18px;
 		line-height: 23px;
 	}
+
+  	span.row{
+	  height: 22px;
+	  display: inline-block;
+	  overflow: hidden;
+	}
 }
 
 .block-editor{
